Fixes twitter icon alignment in firefox

--- a/src/styles/editor/editor.css
+++ b/src/styles/editor/editor.css
@@ -241,6 +241,7 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
+  align-items: center;
 
   & i {
     font-size: 1.5em;
